--- a/tf2_transforms_pkg/CMakeLists.txt
+++ b/tf2_transforms_pkg/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_ros
   tf2_geometry_msgs
   tf2_sensor_msgs
+  pcl_ros
 )
 
 ## System dependencies are found with CMake's conventions
