--- a/teleop/package.xml
+++ b/teleop/package.xml
@@ -49,6 +49,7 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>roslaunch</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>message_filters</build_depend>
@@ -56,7 +57,7 @@
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_sensor_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
-  <build_depend>ros_numpy</build_depend>
+
   <build_export_depend>roslaunch</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>message_filters</build_export_depend>
@@ -64,7 +65,7 @@
   <build_export_depend>tf2_ros</build_export_depend>
   <build_export_depend>tf2_sensor_msgs</build_export_depend>
   <build_export_depend>cv_bridge</build_export_depend>
-  <build_export_depend>ros_numpy</build_export_depend>
+
   <exec_depend>roslaunch</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>message_filters</exec_depend>
@@ -73,6 +74,7 @@
   <exec_depend>tf2_sensor_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>ros_numpy</exec_depend>
+  <exec_depend>python-scipy</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
