Moved to the fork with a proper (height, width) fields in a PointCloud2.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "Azure_Kinect_ROS_Driver"]
 	path = Azure_Kinect_ROS_Driver
-	url = https://github.com/microsoft/Azure_Kinect_ROS_Driver.git
+	url = https://github.com/tum-i6/Azure_Kinect_ROS_Driver.git
+	branch = fix_unordered_point_cloud
 [submodule "openni2_camera"]
 	path = openni2_camera
 	url = https://github.com/ros-drivers/openni2_camera.git
