implemented separate scene and actuation objects that are now used for teleoperation and RL environment.

--- a/teleop/package.xml
+++ b/teleop/package.xml
@@ -74,6 +74,7 @@
   <exec_depend>tf2_sensor_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>ros_numpy</exec_depend>
+  <exec_depend>python-scipy</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
