--- a/teleop/package.xml
+++ b/teleop/package.xml
@@ -75,6 +75,7 @@
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>ros_numpy</exec_depend>
   <exec_depend>python3-scipy</exec_depend>
+  <exec_depend>rospkg</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
